fix issue #542 - web actions do not save/load properly if a basic auth password value isn't included in setting value